修改appid在配置中

--- a/front-client/swiper/project.config.json
+++ b/front-client/swiper/project.config.json
@@ -12,7 +12,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.94",
-	"appid": "touristappid",
+	"appid": "wx503d382e1dc0a087",
 	"projectname": "swiper%E7%BB%84%E4%BB%B6%E7%A4%BA%E4%BE%8B",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
