增加lvdi_project,删掉swiper

--- a/front-client/lvdi_project/app.json
+++ b/front-client/lvdi_project/app.json
@@ -1,11 +1,12 @@
 {
   "pages": [
-    "index/index"
+    "pages/index/index",
+    "pages/packetRain/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "swiper",
+    "navigationBarTitleText": "WeChat",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json"
