--- a/front-client/lvdi_project/project.config.json
+++ b/front-client/lvdi_project/project.config.json
@@ -14,7 +14,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.8.1",
-	"appid": "wx503d382e1dc0a087",
+	"appid": "wx169147d6a93c3e8f",
 	"projectname": "lvdi_project",
 	"debugOptions": {
 		"hidedInDevtools": []
